--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <div class="passo ativo" id="passo-0">
             <p>
-                Um dia desses, você e suas amigas estavam planejando ir para o México para as Olimpíadas de 2028. Porém estão sem dinheiro, então resolvem...
+                Um dia desses, você e suas amigas estavam planejando ir para o Londres para as Olimpíadas de 2028. Porém estão sem dinheiro, então resolvem...
             </p>
             <img src="fitaadesiva.png" alt="">
             <button class="btn-proximo" data-proximo = "1">Jogar no tigrinho</button>
